--- a/project_1/code/Project_1_Singular_Notebook.ipynb
+++ b/project_1/code/Project_1_Singular_Notebook.ipynb
@@ -478,11 +478,11 @@
    "outputs": [],
    "source": [
     "# Thesis: SAT scores have improved over 3 years and SAT scores are better in areas by intended college major (i.e. math major better at math etc.etc.)\n",
-    "#Step 0: Import (DONE) \n",
-    "sat17 = pd.read_csv('/Users/ben/Desktop/DSI_GA_Materials/project_1/data/sat_2017.csv')\n",
-    "sat18 = pd.read_csv('/Users/ben/Desktop/DSI_GA_Materials/project_1/data/sat_2018.csv')\n",
-    "sat19 = pd.read_csv('/Users/ben/Desktop/DSI_GA_Materials/project_1/data/sat_2019.csv')\n",
-    "sat19maj = pd.read_csv('/Users/ben/Desktop/DSI_GA_Materials/project_1/data/sat_2019_by_intended_college_major.csv')"
+    "#Step 0: Import / Replace with local file path \n",
+    "sat17 = pd.read_csv('../data/sat_2017.csv')\n",
+    "sat18 = pd.read_csv('../data/sat_2018.csv')\n",
+    "sat19 = pd.read_csv('../data/sat_2019.csv')\n",
+    "sat19maj = pd.read_csv('../data/sat_2019_by_intended_college_major.csv')"
    ]
   },
   {
