markdown comment edits

--- a/Files/code/Project_1_Singular_Notebook.ipynb
+++ b/Files/code/Project_1_Singular_Notebook.ipynb
@@ -1284,7 +1284,7 @@
    "source": [
     "## Comments: \n",
     "\n",
-    "Some of these trends are what we would expect given public education resources by state as well as level of rigor for academic intended majors. \n",
+    "Some of these trends in increased participation are what we would expect given public education resources by state as well as level of rigor for academic intended majors. As funding increases programs expand and permit more students to take these exams. \n",
     "\n",
     "Will use lineplots/scatterplots to show increases in state participation rates from year to year. (2017-2019)"
    ]
@@ -1332,7 +1332,7 @@
    "source": [
     "## Comments: \n",
     "\n",
-    "Some of these trends are what we would expect given public education resources by state as well as level of rigor for academic intended majors. \n",
+    "Regarding decrease in scores seen from these dataframes, these trends are what we would expect given public education resources by state as well as level of rigor for academic intended majors, in particular, allocating resources but not adequately preparing students for the exams (see sources).\n",
     "\n",
     "Will use lineplots/scatterplots to show increases in state totals from year to year. (2017-2019)"
    ]
@@ -1498,9 +1498,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**To-Do:** *Edit this cell with your findings on trends in the data (step 3 above).*\n",
     "\n",
-    "Increase in participation (about 4% per year) while decrease in scores (about 6 points per year). Makes sense, new test takers bring in new struggles. \"Growing pains.\" \n",
+    "Increase in participation (about 4% per year) while decrease in scores (about 6 points per year). This makes sense, new test takers bring in new struggles. \"Growing pains.\" \n",
     "\n",
     "Sciences performed best in the exams while participation was highest in health science, business, and engineering.\n",
     "\n",
