finished markdown comments for figures

--- a/Files/code/Project_1_Singular_Notebook.ipynb
+++ b/Files/code/Project_1_Singular_Notebook.ipynb
@@ -1632,6 +1632,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### These figures directly support our hypothesis that participation increases while test scores decrease. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visuals"
    ]
   },
@@ -1703,6 +1710,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This barchart shows that participation increases among all the above states from the years $2017$ through $2019$. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 530,
    "metadata": {},
@@ -1736,6 +1750,13 @@
     "plt.ylabel('Total Mean Scores')\n",
     "plt.title('Total Mean SAT Scores 2017-2019')   \n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The above box-and-whisker plot shows how total test scores, median, and average test scores decrease over our three year timespan. Despite outlier scores increasing in $2018$, these decrease further than the original outlier points in seen in $2017$ by the time we reach our final year in the time period, namely, $2019$. "
    ]
   },
   {
@@ -1793,6 +1814,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scatterplots with best fit lines, the average scores, and the regression line formulae and $\\textbf{R}^2$ values. From these we conclude without any further doubt that test scores decrease as participation levels increase over the three years within this study.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 532,
    "metadata": {},
@@ -1824,6 +1852,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Participation barchart for intended college majors. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 533,
    "metadata": {},
@@ -1852,6 +1887,13 @@
     "plt.title('Intended College Major Total Scores')\n",
     "plt.gca().invert_yaxis()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Barchart showing intended college major total scores. Intended majors in STEM are outperforming other intended major groups. "
    ]
   },
   {
@@ -1887,6 +1929,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Barchart showing intended college major mathematics scores. Intended majors in STEM are outperforming those in other intended major groups. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 535,
    "metadata": {},
@@ -1916,6 +1965,13 @@
     "plt.title('Intended College Major Reading and Writing Scores')\n",
     "plt.gca().invert_yaxis()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Barchart showing intended college major reading and writing scores. Intended majors in STEM are outperforming even those within intended majors related to reading and writing. "
    ]
   },
   {
